# AIVideoSearch

./: .gitignore  README.md  README_es.md  README_fr.md  README_ja.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml  run.sh
src/: app.py  base.py  config.py  main.py
test/: index.html
